--- a/produtos.html
+++ b/produtos.html
@@ -10,17 +10,19 @@
 </head>
 <body>
     <header>
-        <h1>
-            <img src="imagens/logo.png">
-        </h1>
+        <div class="caixa">
+            <h1>
+                <img src="imagens/logo.png">
+            </h1>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contatos.html">Contatos</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contatos.html">Contatos</a></li>
+                </ul>
+            </nav>
+        </div>
 
     </header>
     
