--- a/produtos.html
+++ b/produtos.html
@@ -25,6 +25,27 @@
         </div>
 
     </header>
-    
+    <main>
+        <ul>
+            <li>
+                <h2>Cabelo</h2>
+                <img src="./imagens/cabelo.jpg" title="corte de cabelo"/>
+                <p>Na tesoura ou máquina, como o cliente preferir</p>
+                <p>R$ 25,00</p>
+            </li>
+            <li>
+                <h2>Barba</h2>
+                <img src="./imagens/barba.jpg" title="corte de barba"/>
+                <p>Corte e desenho profissional de barba</p>
+                <p>R$ 18,00</p>
+            </li>
+            <li>
+                <h2>Cabelo + Barba</h2>
+                <img src="./imagens/cabelo+barba.jpg" title="corte de cabelo e corte de barba"/>
+                <p>Pacote completo de cabelo e barba</p>
+                <p>R$ 35,00</p>
+            </li>
+        </ul>
+    </main>
 </body>
 </html>
